Cleanup some constexpr nits in base/numerics

Cleanup some unneeded inlines and make two trivial cases constexpr

BUG=612995

Review-Url: https://codereview.chromium.org/1995753003
Cr-Commit-Position: refs/heads/master@{#394680}